--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 body {
-  background-image: url('../public/bg.png');
+  background-image: url('/bg.png');
   background-repeat: repeat-y;
   background-position: center center;
   background-size: cover;
@@ -30,7 +30,7 @@ footer {
   font-size: 14px;
   color: #555;
   box-shadow: 0 -1px 4px rgba(0,0,0,0.1);
-  background-image: url('../public/bg.png');
+  background-image: url('/bg.png');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
