--- a/frontend/src/components/SearchBar/SearchBar.css
+++ b/frontend/src/components/SearchBar/SearchBar.css
@@ -23,8 +23,8 @@
     box-shadow: 0 0 0 3px rgba(26, 115, 232, 0.2);
 }
 
-/* ---------- Checkbox ----------*/
-.dropdown-checkbox {
+/* ---------- Dropdown ----------*/
+.dropdown {
     position: relative;
     width: 240px;
     font-family: sans-serif;
@@ -32,7 +32,7 @@
 }
 
 /* Header */
-.dropdown-checkbox .dropdown-header {
+.dropdown .dropdown-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -44,7 +44,7 @@
     min-width: 0;
 }
 
-.dropdown-checkbox .dropdown-header span:first-child {
+.dropdown .dropdown-header span:first-child {
     flex: 1;
     min-width: 0;
     overflow: hidden;
@@ -53,18 +53,18 @@
 }
 
 /* Arrow */
-.dropdown-checkbox .dropdown-header .arrow {
+.dropdown .dropdown-header .arrow {
     border: 6px solid transparent;
     border-top-color: #999;
     transition: transform .2s;
 }
 
-.dropdown-checkbox.open .dropdown-header .arrow {
+.dropdown.open .dropdown-header .arrow {
     transform: rotate(180deg);
 }
 
-/* Dropdown */
-.dropdown-checkbox .dropdown-list {
+/* Dropdown List */
+.dropdown .dropdown-list {
     position: absolute;
     top: calc(100% + 6px);
     left: 0;
@@ -81,14 +81,14 @@
     z-index: 10;
 }
 
-.dropdown-checkbox.open .dropdown-list {
+.dropdown.open .dropdown-list {
     opacity: 1;
     visibility: visible;
     transform: translateY(0);
 }
 
-/* Labels */
-.dropdown-checkbox .dropdown-list label {
+/* Label */
+.dropdown .dropdown-list label {
     display: flex;
     align-items: center;
     padding: 8px 16px;
@@ -96,19 +96,19 @@
     user-select: none;
 }
 
-.dropdown-checkbox .dropdown-list label:hover {
+.dropdown .dropdown-list label:hover {
     background: #f5f7fa;
 }
 
-/* Checkbox */
-.dropdown-checkbox .dropdown-list input[type=checkbox] {
+/* Checkbox / Radio */
+.dropdown .dropdown-list input[type=checkbox],
+.dropdown .dropdown-list input[type=radio] {
     padding: 0;
     appearance: none;
     -webkit-appearance: none;
     width: 18px;
     height: 18px;
-    margin: 0;
-    margin-right: 12px;
+    margin: 0 12px 0 0;
     border: 2px solid #ccc;
     border-radius: 50%;
     position: relative;
@@ -117,17 +117,19 @@
 }
 
 /* Checked */
-.dropdown-checkbox .dropdown-list input[type=checkbox]:checked {
+.dropdown .dropdown-list input[type=checkbox]:checked,
+.dropdown .dropdown-list input[type=radio]:checked {
     background-color: #1a73e8;
     border-color: #1a73e8;
 }
 
 /* Checked Symbol */
-.dropdown-checkbox .dropdown-list input[type=checkbox]:checked::after {
+.dropdown .dropdown-list input[type=checkbox]:checked::after,
+.dropdown .dropdown-list input[type=radio]:checked::after{
     content: "";
     position: absolute;
     left: 4px;
-    top: 1px;
+    top: 0px;
     width: 5px;
     height: 10px;
     border: solid #fff;
@@ -159,3 +161,4 @@
     transform: scale(0.96);
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 }
+
